fixed bug where homepage calendar icon was stretched

--- a/philip-morgan-foundation/src/components/Home/_Home.scss
+++ b/philip-morgan-foundation/src/components/Home/_Home.scss
@@ -169,6 +169,7 @@ section {
 
         img {
           height: 100px;
+          width: auto;
         }
 
         h2 {
